Navigation in smaller screen - make sure the scroll is covering the full width

--- a/frontend/scss/globals/_nav.scss
+++ b/frontend/scss/globals/_nav.scss
@@ -29,19 +29,27 @@ $height__nav: 60px;
   overflow-x:auto;
 
   @include breakpoint(xsmall) {
-    width:calc(100% + #{ 17px + map-get($outer-gutters, xsmall) });
+    margin-left: -#{ map-get($outer-gutters, xsmall)};
+    padding-left: #{ map-get($outer-gutters, xsmall) - 17px };
+    width:calc(100% + #{ map-get($outer-gutters, xsmall) + map-get($outer-gutters, xsmall) });
   }
 
   @include breakpoint(small) {
-    width:calc(100% + #{ 17px + map-get($outer-gutters, small) });
+    margin-left: -#{ map-get($outer-gutters, small)};
+    padding-left: #{ map-get($outer-gutters, small) - 17px };
+    width:calc(100% + #{ map-get($outer-gutters, small) + map-get($outer-gutters, small) });
   }
 
   @include breakpoint(medium) {
-    width:calc(100% + #{ 17px + map-get($outer-gutters, medium) });
+    margin-left: -#{ map-get($outer-gutters, medium)};
+    padding-left: #{ map-get($outer-gutters, medium) - 17px };
+    width:calc(100% + #{ map-get($outer-gutters, medium) + map-get($outer-gutters, medium) });
   }
 
   @include breakpoint(large) {
-    width:calc(100% + #{ 17px + map-get($outer-gutters, large) });
+    margin-left: -#{ map-get($outer-gutters, large)};
+    padding-left: #{ map-get($outer-gutters, large) - 17px };
+    width:calc(100% + #{ map-get($outer-gutters, large) + map-get($outer-gutters, large) });
   }
 
   .s--search & {
